--- a/faq/index.html
+++ b/faq/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper"></div>
+    <div class="content-wrapper">
     <a href="#">
       <img src="" alt="unplugged logo">
     </a>
@@ -40,6 +40,7 @@
     </div>
   </header>
 
+  
   <main class="faq">
     <div class="content-wrapper">
       <h2>Frequently Asked Questions</h2>
@@ -48,24 +49,24 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Quis ipsum suspendisse ultrices gravida.
         </p>
+        </div>
         <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
           </p>
+          </div>
           <div class="faq-content">
             <h4>What size teams can you accommodate?</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua.
             </p>
+          </div>
             <div class="faq-content">
               <h4>Is there really no wifi available?</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
               </p>
-
             </div>
           </div>
 
