--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper"></div>
+    <div class="content-wrapper">
     <a href="#">
       <img src="" alt="unplugged logo">
     </a>
@@ -66,7 +66,6 @@
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
-
         <div class="features-items">
           <article>
             <p class="fontawesome-icons"></p>
@@ -105,17 +104,19 @@
         </div>
       </div>
     </section>
+
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.
         </h2>
         <article>
-          <h3>LaCrue Bottling Co.<br>
-            October 2018</h3>
+          <div>
+          <h3>LaCrue Bottling Co. October 2018</h3>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
               pariatur.</p>
+              </div>
         </article>
       </div>
     </section>
