--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <header>
-    <div class="content-wrapper"></div>
+    <div class="content-wrapper">
     <a href="#">
       <img src="" alt="unplugged logo">
     </a>
@@ -37,7 +37,9 @@
     </nav>
     </div>
   </header>
+
   <main>
+
     <section class="mission">
       <div class="content-wrapper">
         <h2>Our Mission - we want to make you the team you always wanted to be.
@@ -59,6 +61,7 @@
 
   </figure>
 </section>
+
 <section class="contact-section">
   <div class="content-wrapper">
     <h2>Contact us, because you all need this.
@@ -84,6 +87,7 @@
 </section>
 
   </main>
+  
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
