--- a/about/index.html
+++ b/about/index.html
@@ -58,21 +58,21 @@
     </section>
 <section class="map">
   <figure>
-
   </figure>
 </section>
 
 <section class="contact-section">
   <div class="content-wrapper">
-    <h2>Contact us, because you all need this.
-    </h2>
+    <h2>Contact us, because you all need this.</h2>
     <div class="contact-content">
       <div>
         <h4>General Information</h4>
         <address>
-          <p>333 Main St, Lake Geneva, WI 53147<br>
+          <p>
+            333 Main St, Lake Geneva, WI 53147<br>
             555-555-5555<br>
-            hello@unplugged.com</p>
+            hello@unplugged.com
+          </p>
         </address>
       </div>
       <div>
