--- a/about/index.html
+++ b/about/index.html
@@ -1,45 +1,42 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>About | Unplugged Retreat</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="../site.webmanifest">
   <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-
-  <!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-    <a href="#">
-      <img src="" alt="unplugged logo">
-    </a>
-    <div class="header-divider"></div>
-    <nav>
-      <ul>
-        <li><a href="../faq/index.html">FAQ</a></li>
-        <li><a href="index.html">About</a></li>
-      </ul>
-    </nav>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -47,52 +44,61 @@
 
     <section class="mission">
       <div class="content-wrapper">
-        <h2>Our Mission - we want to make you the team you always wanted to be.
-        </h2>
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
             vel facilisis.
           </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
             vel facilisis.
           </p>
         </div>
       </div>
+      <!-- mission content wrapper ends -->
     </section>
-<section class="map">
-  <figure>
-  </figure>
-</section>
+    <!-- contact-info -->
 
-<section class="contact-section">
-  <div class="content-wrapper">
-    <h2>Contact us, because you all need this.</h2>
-    <div class="contact-content">
-      <div>
-        <h4>General Information</h4>
-        <address>
-          <p>
-            333 Main St, Lake Geneva, WI 53147<br>
-            555-555-5555<br>
-            hello@unplugged.com
-          </p>
-        </address>
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <div class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <address>
+              <p>
+                333 Main St, Lake Geneva, WI 53147<br>
+                555-555-5555<br>
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <address>
+              <p>
+                555-555-5556<br>
+                facilitator@unplugged.com
+              </p>
+            </address>
+          </div>
+          <!-- contact-content div ends -->
+        </div>
+        <!-- contact content wrapper ends -->
       </div>
-      <div>
-        <h4>Chat with a Facilitator</h4>
-        <address>
-          <p>555-555-5556<br>
-            facilitator@unplugged.com</p>
-        </address>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
   </main>
-  
+  <!-- main wrapper -->
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
@@ -120,25 +126,34 @@
           </div>
         </div>
       </div>
-
+      <!-- footer content ends -->
     </div>
-
-    <div class="copyright>">
-      <p>Copyright 202x | Unplugged</p>
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 202X | Unplugged</p>
     </div>
   </footer>
 
-
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script>
+    window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
+  </script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    window.ga = function () {
+      ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview')
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
