--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Unplugged Retreat</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
-  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-
-  <!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
 
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-    <a href="#">
-      <img src="" alt="unplugged logo">
-    </a>
-    <div class="header-divider"></div>
-    <nav>
-      <ul>
-        <li><a href="faq/index.html">FAQ</a></li>
-        <li><a href="about/index.html">About</a></li>
-      </ul>
-    </nav>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -58,7 +52,8 @@
       <div class="content-wrapper">
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
           </p>
         </div>
         <div class="form">
@@ -67,6 +62,7 @@
           <input type="button" value="Download Itinerary">
         </div>
       </div>
+      <!-- aside content wrapper ends -->
     </aside>
 
     <section class="features">
@@ -74,37 +70,45 @@
         <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
         <div class="features-items">
           <article>
-            <p class="fontawesome-icons"></p>
-            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
             </p>
           </article>
           <article>
-            <p class="fontawesome-icons"></p>
-            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
-              breakout rooms.
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
             </p>
           </article>
           <article>
-            <p class="fontawesome-icons"></p>
-            <p class="features-item-description">Private chef team providing on demand meals - just like your team
-              kitchen.
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Private chef team providing on demand meals - just like your team kitchen.
             </p>
           </article>
           <article>
-            <p class="fontawesome-icons"></p>
-            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
-              bungalow.
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach ½ mile from bungalow.
             </p>
           </article>
           <article>
-            <p class="fontawesome-icons"></p>
-            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
-              a chance to reset.
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
             </p>
           </article>
           <article>
-            <p class="fontawesome-icons"></p>
-            <p class="features-item-description">Dedicated computer room for times that you must wifi.
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi.
             </p>
           </article>
         </div>
@@ -113,21 +117,26 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like this one.
-        </h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+            <img src="img/unplugged-retreat-lacrue.jpg" alt="Group of happy people at an outdoor retreat.">
+          </figure>
           <div>
-          <h3>LaCrue Bottling Co. October 2018</h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-              pariatur.</p>
-              </div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor
+              in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+          </div>
         </article>
       </div>
     </section>
 
   </main>
+  <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
@@ -156,27 +165,34 @@
           </div>
         </div>
       </div>
-
+      <!-- footer content ends -->
     </div>
-
-    <div class="copyright>">
-      <p>Copyright 202x | Unplugged</p>
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 202X | Unplugged</p>
     </div>
   </footer>
 
-
-
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+  </script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    window.ga = function () {
+      ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview')
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
