--- a/about/index.html
+++ b/about/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <script src="https://kit.fontawesome.com/6f92618e89.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -64,7 +65,8 @@
 
     <section class="map">
       <figure>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89020.30345054252!2d-110.93661060777734!3d45.79354196117083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53456abfa15e2ac5%3A0x3aefc4b8ef5ed861!2sSaddle%20Peak!5e0!3m2!1sen!2sus!4v1738173193463!5m2!1sen!2sus"
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89020.30345054252!2d-110.93661060777734!3d45.79354196117083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53456abfa15e2ac5%3A0x3aefc4b8ef5ed861!2sSaddle%20Peak!5e0!3m2!1sen!2sus!4v1738173193463!5m2!1sen!2sus"
           width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </figure>
